samples/_failures_safe/1761044322_6633af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_261b381a.c: In function ‘main’:
./samples/SAFE/__tmp_261b381a.c:154:59: error: ‘CLOCKS’ undeclared (first use in this function)
  154 |     double cpu_time = ((double)(end_time - start_time)) / CLOCKS
      |                                                           ^~~~~~
./samples/SAFE/__tmp_261b381a.c:154:59: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_261b381a.c:154:5: error: expected ‘,’ or ‘;’ at end of input
  154 |     double cpu_time = ((double)(end_time - start_time)) / CLOCKS
      |     ^~~~~~
./samples/SAFE/__tmp_261b381a.c:154:5: error: expected declaration or statement at end of input
